--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -1,34 +1,42 @@
 name: CI/CD for Node.js App
+
 on:
-push:
-branches:
-- main # Trigger workflow on pushes to main branch
+  push:
+    branches:
+      - main            # Run when you push to main
+  workflow_dispatch:    # Also allow manual "Run workflow" button
+
 jobs:
-build-and-push:
-runs-on: ubuntu-latest
-steps:
-# Step 1: Checkout the code
-- name: Checkout repository
-uses: actions/checkout@v3
-# Step 2: Log in to Docker Hub
-- name: Log in to Docker Hub
-uses: docker/login-action@v2
-with:
-username: ${{ secrets.DOCKER_USERNAME }}
-password: ${{ secrets.DOCKER_PASSWORD }}
-# Step 3: Build and push the Docker image
-- name: Build and push Docker image
-uses: docker/build-push-action@v4
-with:
-context: .
-push: true
-tags: <docker-username>/<repo-name>:latest
-deploy:
-runs-on: ubuntu-latest
-needs: build-and-push # Run after the build-and-push job
-steps:
-- name: Deploy to Server
-run: |
-echo "Deploying container to production..."
-# Add your deployment commands here (e.g., SSH to server and run
-Docker commands)
+  build-and-push:
+    runs-on: ubuntu-latest
+
+    steps:
+      # Step 1: Checkout repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # (Optional) Step 2: Install Node deps & run tests
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm ci
+        continue-on-error: true   # remove this if you want tests to fail the build
+
+      # Step 3: Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Step 4: Build and push Docker image
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: fazal000/lab10-nodejs-app:latest
+          # ^^^ change to your real Docker Hub repo name if different
