--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -1,42 +1,29 @@
-  name: CI/CD for Node.js App
+name: CI/CD for Node.js App
 
 on:
   push:
     branches:
-      - main            # Run when you push to main
-  workflow_dispatch:    # Also allow manual "Run workflow" button
+      - main          # Run on pushes to main
+  workflow_dispatch:  # Also allow manual "Run workflow" from Actions tab
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # (Optional) Step 2: Install Node deps & run tests
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm ci
-        continue-on-error: true   # remove this if you want tests to fail the build
-
-      # Step 3: Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 4: Build and push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/lab10-nodejs-app:latest
-          # ^^^ change to your real Docker Hub repo name if different
+          # This will push to: <your-docker-username>/lab10-nodejs-app:latest
